src/main/java/com/kambr/parser/onex/tursys/generated/TurSysParser.java
// Generated from TurSys.g4 by ANTLR 4.8

package com.kambr.parser.onex.tursys.generated;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TurSysParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INTEGER=1, NUMBER=2, WORD=3, ID=4, NEW_LINE=5, SEPARATOR_SKIP=6;
	public static final int
		RULE_file = 0, RULE_header = 1, RULE_row = 2, RULE_segment = 3, RULE_departureDate = 4, 
		RULE_carrierCode = 5, RULE_flightNumber = 6, RULE_origin = 7, RULE_destination = 8, 
		RULE_flightPath = 9, RULE_cabinCode = 10, RULE_seatAssignment = 11, RULE_liftStatus = 12, 
		RULE_boardingSequence = 13, RULE_pnr = 14, RULE_couponIdentificationCode = 15, 
		RULE_fareBasisCode = 16, RULE_bookingTypeCode = 17, RULE_bookingStatusCode = 18, 
		RULE_bookingDate = 19, RULE_bookingTime = 20, RULE_ticketingDate = 21, 
		RULE_ticketingTime = 22, RULE_cancellationDate = 23, RULE_agentCode = 24, 
		RULE_salesSource = 25, RULE_passengerType = 26, RULE_currency = 27, RULE_rateOfExchange = 28, 
		RULE_spoBasePrice = 29, RULE_promoIdentifier = 30, RULE_discount = 31, 
		RULE_dynamicPriceAdjustment = 32, RULE_priceAdjustmentApplied = 33, RULE_salesPrice = 34, 
		RULE_tax = 35, RULE_totalAmount = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "header", "row", "segment", "departureDate", "carrierCode", "flightNumber", 
			"origin", "destination", "flightPath", "cabinCode", "seatAssignment", 
			"liftStatus", "boardingSequence", "pnr", "couponIdentificationCode", 
			"fareBasisCode", "bookingTypeCode", "bookingStatusCode", "bookingDate", 
			"bookingTime", "ticketingDate", "ticketingTime", "cancellationDate", 
			"agentCode", "salesSource", "passengerType", "currency", "rateOfExchange", 
			"spoBasePrice", "promoIdentifier", "discount", "dynamicPriceAdjustment", 
			"priceAdjustmentApplied", "salesPrice", "tax", "totalAmount"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, "'|'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INTEGER", "NUMBER", "WORD", "ID", "NEW_LINE", "SEPARATOR_SKIP"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TurSys.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TurSysParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public TerminalNode EOF() { return getToken(TurSysParser.EOF, 0); }
		public List<RowContext> row() {
			return getRuleContexts(RowContext.class);
		}
		public RowContext row(int i) {
			return getRuleContext(RowContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TurSysVisitor ) return ((TurSysVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			header();
			setState(76); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(75);
				row();
				}
				}
				setState(78); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==INTEGER || _la==WORD );
			setState(80);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public TerminalNode NEW_LINE() { return getToken(TurSysParser.NEW_LINE, 0); }
		public List<TerminalNode> ID() { return getTokens(TurSysParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TurSysParser.ID, i);
		}
		public List<TerminalNode> WORD() { return getTokens(TurSysParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(TurSysParser.WORD, i);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TurSysVisitor ) return ((TurSysVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(82);
				_la = _input.LA(1);
				if ( !(_la==WORD || _la==ID) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(85); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WORD || _la==ID );
			setState(87);
			match(NEW_LINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RowContext extends ParserRuleContext {
		public List<SegmentContext> segment() {
			return getRuleContexts(SegmentContext.class);
		}
		public SegmentContext segment(int i) {
			return getRuleContext(SegmentContext.class,i);
		}
		public PnrContext pnr() {
			return getRuleContext(PnrContext.class,0);
		}
		public CouponIdentificationCodeContext couponIdentificationCode() {
			return getRuleContext(CouponIdentificationCodeContext.class,0);
		}
		public FareBasisCodeContext fareBasisCode() {
			return getRuleContext(FareBasisCodeContext.class,0);
		}
		public BookingTypeCodeContext bookingTypeCode() {
			return getRuleContext(BookingTypeCodeContext.class,0);
		}
		public BookingStatusCodeContext bookingStatusCode() {
			return getRuleContext(BookingStatusCodeContext.class,0);
		}
		public BookingDateContext bookingDate() {
			return getRuleContext(BookingDateContext.class,0);
		}
		public BookingTimeContext bookingTime() {
			return getRuleContext(BookingTimeContext.class,0);
		}
		public TicketingDateContext ticketingDate() {
			return getRuleContext(TicketingDateContext.class,0);
		}
		public TicketingTimeContext ticketingTime() {
			return getRuleContext(TicketingTimeContext.class,0);
		}
		public AgentCodeContext agentCode() {
			return getRuleContext(AgentCodeContext.class,0);
		}
		public SalesSourceContext salesSource() {
			return getRuleContext(SalesSourceContext.class,0);
		}
		public PassengerTypeContext passengerType() {
			return getRuleContext(PassengerTypeContext.class,0);
		}
		public CurrencyContext currency() {
			return getRuleContext(CurrencyContext.class,0);
		}
		public RateOfExchangeContext rateOfExchange() {
			return getRuleContext(RateOfExchangeContext.class,0);
		}
		public SpoBasePriceContext spoBasePrice() {
			return getRuleContext(SpoBasePriceContext.class,0);
		}
		public PromoIdentifierContext promoIdentifier() {
			return getRuleContext(PromoIdentifierContext.class,0);
		}
		public DiscountContext discount() {
			return getRuleContext(DiscountContext.class,0);
		}
		public DynamicPriceAdjustmentContext dynamicPriceAdjustment() {
			return getRuleContext(DynamicPriceAdjustmentContext.class,0);
		}
		public PriceAdjustmentAppliedContext priceAdjustmentApplied() {
			return getRuleContext(PriceAdjustmentAppliedContext.class,0);
		}
		public SalesPriceContext salesPrice() {
			return getRuleContext(SalesPriceContext.class,0);
		}
		public TaxContext tax() {
			return getRuleContext(TaxContext.class,0);
		}
		public TotalAmountContext totalAmount() {
			return getRuleContext(TotalAmountContext.class,0);
		}
		public TerminalNode NEW_LINE() { return getToken(TurSysParser.NEW_LINE, 0); }
		public CancellationDateContext cancellationDate() {
			return getRuleContext(CancellationDateContext.class,0);
		}
		public RowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_row; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TurSysVisitor ) return ((TurSysVisitor<? extends T>)visitor).visitRow(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RowContext row() throws RecognitionException {
		RowContext _localctx = new RowContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_row);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			segment();
			setState(90);
			segment();
			setState(91);
			segment();
			setState(92);
			pnr();
			setState(93);
			couponIdentificationCode();
			setState(94);
			fareBasisCode();
			setState(95);
			bookingTypeCode();
			setState(96);
			bookingStatusCode();
			setState(97);
			bookingDate();
			setState(98);
			bookingTime();
			setState(99);
			ticketingDate();
			setState(100);
			ticketingTime();
			setState(102);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(101);
				cancellationDate();
				}
				break;
			}
			setState(104);
			agentCode();
			setState(105);
			salesSource();
			setState(106);
			passengerType();
			setState(107);
			currency();
			setState(108);
			rateOfExchange();
			setState(109);
			spoBasePrice();
			setState(110);
			promoIdentifier();
			setState(111);
			discount();
			setState(112);
			dynamicPriceAdjustment();
			setState(113);
			priceAdjustmentApplied();
			setState(114);
			salesPrice();
			setState(115);
			tax();
			setState(116);
			totalAmount();
			setState(117);
			match(NEW_LINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SegmentContext extends ParserRuleContext {
		public FlightNumberContext flightNumber() {
			return getRuleContext(FlightNumberContext.class,0);
		}
		public BoardingSequenceContext boardingSequence() {
			return getRuleContext(BoardingSequenceContext.class,0);
		}
		public DepartureDateContext departureDate() {
			return getRuleContext(DepartureDateContext.class,0);
		}
		public CarrierCodeContext carrierCode() {
			return getRuleContext(CarrierCodeContext.class,0);
		}
		public OriginContext origin() {
			return getRuleContext(OriginContext.class,0);
		}
		public DestinationContext destination() {
			return getRuleContext(DestinationContext.class,0);
		}
		public FlightPathContext flightPath() {
			return getRuleContext(FlightPathContext.class,0);
		}
		public CabinCodeContext cabinCode() {
			return getRuleContext(CabinCodeContext.class,0);
		}
		public SeatAssignmentContext seatAssignment() {
			return getRuleContext(SeatAssignmentContext.class,0);
		}
		public LiftStatusContext liftStatus() {
			return getRuleContext(LiftStatusContext.class,0);
		}
		public SegmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_segment; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TurSysVisitor ) return ((TurSysVisitor<? extends T>)visitor).visitSegment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SegmentContext segment() throws RecognitionException {
		SegmentContext _localctx = new SegmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_segment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(119);
				departureDate();
				}
				break;
			}
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WORD) {
				{
				setState(122);
				carrierCode();
				}
			}

			setState(125);
			flightNumber();
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(126);
				origin();
				}
				break;
			}
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(129);
				destination();
				}
				break;
			}
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(132);
				flightPath();
				}
				break;
			}
			setState(136);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(135);
				cabinCode();
				}
				break;
			}
			setState(139);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(138);
				seatAssignment();
				}
				break;
			}
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WORD) {
				{
				setState(141);
				liftStatus();
				}
			}

			setState(144);
			boardingSequence();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DepartureDateContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(TurSysParser.INTEGER, 0); }
		public DepartureDateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_departureDate; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TurSysVisitor ) return ((TurSysVisitor<? extends T>)visitor).visitDepartureDate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DepartureDateContext departureDate() throws RecognitionException {
		DepartureDateContext _localctx = new DepartureDateContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_departureDate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CarrierCodeContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(TurSysParser.WORD, 0); }
		public CarrierCodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_carrierCode; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TurSysVisitor ) return ((TurSysVisitor<? extends T>)visitor).visitCarrierCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CarrierCodeContext carrierCode() throws RecognitionException {
		CarrierCodeContext _localctx = new CarrierCodeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_carrierCode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FlightNumberContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(TurSysParser.INTEGER, 0); }
		public FlightNumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flightNumber; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TurSysVisitor ) return ((TurSysVisitor<? extends T>)visitor).visitFlightNumber(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FlightNumberContext flightNumber() throws RecognitionException {
		FlightNumberContext _localctx = new FlightNumberContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_flightNumber);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OriginContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(TurSysParser.WORD, 0); }
		public OriginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_origin; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TurSysVisitor ) return ((TurSysVisitor<? extends T>)visitor).visitOrigin(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OriginContext origin() throws RecognitionException {
		OriginContext _localctx = new OriginContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_origin);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DestinationContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(TurSysParser.WORD, 0); }
		public DestinationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_destination; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TurSysVisitor ) return ((TurSysVisitor<? extends T>)visitor).visitDestination(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DestinationContext destination() throws RecognitionException {
		DestinationContext _localctx = new DestinationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_destination);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FlightPathContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(TurSysParser.WORD, 0); }
		public FlightPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flightPath; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TurSysVisitor ) return ((TurSysVisitor<? extends T>)visitor).visitFlightPath(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FlightPathContext flightPath() throws RecognitionException {
		FlightPathContext _localctx = new FlightPathContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_flightPath);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CabinCodeContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(TurSysParser.WORD, 0); }
		public CabinCodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cabinCode; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TurSysVisitor ) return ((TurSysVisitor<? extends T>)visitor).visitCabinCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CabinCodeContext cabinCode() throws RecognitionException {
		CabinCodeContext _localctx = new CabinCodeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_cabinCode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SeatAssignmentContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(TurSysParser.INTEGER, 0); }
		public SeatAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seatAssignment; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TurSysVisitor ) return ((TurSysVisitor<? extends T>)visitor).visitSeatAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeatAssignmentContext seatAssignment() throws RecognitionException {
		SeatAssignmentContext _localctx = new SeatAssignmentContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_seatAssignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiftStatusContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(TurSysParser.WORD, 0); }
		public LiftStatusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_liftStatus; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TurSysVisitor ) return ((TurSysVisitor<? extends T>)visitor).visitLiftStatus(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LiftStatusContext liftStatus() throws RecognitionException {
		LiftStatusContext _localctx = new LiftStatusContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_liftStatus);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoardingSequenceContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(TurSysParser.INTEGER, 0); }
		public BoardingSequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boardingSequence; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TurSysVisitor ) return ((TurSysVisitor<? extends T>)visitor).visitBoardingSequence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoardingSequenceContext boardingSequence() throws RecognitionException {
		BoardingSequenceContext _localctx = new BoardingSequenceContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_boardingSequence);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PnrContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TurSysParser.ID, 0); }
		public PnrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pnr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TurSysVisitor ) return ((TurSysVisitor<? extends T>)visitor).visitPnr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PnrContext pnr() throws RecognitionException {
		PnrContext _localctx = new PnrContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_pnr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CouponIdentificationCodeContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(TurSysParser.INTEGER, 0); }
		public CouponIdentificationCodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_couponIdentificationCode; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TurSysVisitor ) return ((TurSysVisitor<? extends T>)visitor).visitCouponIdentificationCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CouponIdentificationCodeContext couponIdentificationCode() throws RecognitionException {
		CouponIdentificationCodeContext _localctx = new CouponIdentificationCodeContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_couponIdentificationCode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FareBasisCodeContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(TurSysParser.WORD, 0); }
		public FareBasisCodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fareBasisCode; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TurSysVisitor ) return ((TurSysVisitor<? extends T>)visitor).visitFareBasisCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FareBasisCodeContext fareBasisCode() throws RecognitionException {
		FareBasisCodeContext _localctx = new FareBasisCodeContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_fareBasisCode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BookingTypeCodeContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(TurSysParser.INTEGER, 0); }
		public BookingTypeCodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bookingTypeCode; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TurSysVisitor ) return ((TurSysVisitor<? extends T>)visitor).visitBookingTypeCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BookingTypeCodeContext bookingTypeCode() throws RecognitionException {
		BookingTypeCodeContext _localctx = new BookingTypeCodeContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_bookingTypeCode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
